fixes margin of the sidebar column and adds first bit of business logic for number being divisible by 15

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,3 +21,15 @@ img {
 body {
   background-color: #ccffe6;
 }
+
+.col-sm-2 {
+  margin-right: 10px;
+  width: 225px;
+}
+
+ul {
+  margin-left: inherit;
+}
+form {
+  margin-left: inherit;
+}
